Mise a jour du fichier Main