@@ -4,7 +4,7 @@ echo ║     GESTIONNAIRE DE RESEAU ELECTRIQUE     ║
 echo ╚════════════════════════════════════════════╝
 echo.
 echo [1/2] Compilation en cours...
-javac -encoding UTF-8 -d bin --module-path libs/windows/lib --add-modules javafx.controls,javafx.fxml -cp bin src/up/mi/paa/util/*.java src/up/mi/paa/model/*.java src/up/mi/paa/exception/*.java src/up/mi/paa/io/*.java src/up/mi/paa/service/*.java src/up/mi/paa/ui/cli/*.java src/up/mi/paa/ui/gui/components/*.java src/up/mi/paa/ui/gui/*.java src/up/mi/paa/Main.java
+javac -encoding UTF-8 -d bin -cp bin src/up/mi/paa/util/*.java src/up/mi/paa/model/*.java src/up/mi/paa/exception/*.java src/up/mi/paa/io/*.java src/up/mi/paa/service/*.java src/up/mi/paa/ui/cli/*.java
 
 if %ERRORLEVEL% NEQ 0 (
     echo [ERREUR] Echec de la compilation.
@@ -15,7 +15,14 @@ echo [OK] Compilation reussie !
 echo.
 
 :: Lancement
-echo [2/2] Lancement du GUI...
-java --module-path libs/windows/lib --add-modules javafx.controls,javafx.fxml -cp bin up.mi.paa.Main --gui
+echo [2/2] Lancement du CLI...
+echo.
+
+:: Vérifier si un fichier est passé en argument
+if "%~1"=="" (
+    java -cp bin up.mi.paa.Main --cli
+) else (
+    java -cp bin up.mi.paa.Main %*
+)
 
 pause
